Fix broken info icon

--- a/src/ui/popup/style.css
+++ b/src/ui/popup/style.css
@@ -83,7 +83,7 @@ body {
 }
 
 .connection__info {
-    background-image: url("assets/icons8-info(1).svg");
+    background-image: url("assets/icons8-info.svg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: 15px;
